# codemaru

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.ko.md  README.md  action.yml  pyproject.toml  requirements.txt  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  labels.yml  release-drafter.yml  sync-requirements.yml
api/: index.py
codemaru/: __init__.py  analytics.py  app.py  cli.py  kv.py  service.py  settings.py
codemaru/adapters/: __init__.py  base.py  github.py  leetcode.py  solvedac.py
codemaru/cache/: __init__.py  base.py  memory.py
codemaru/core/: __init__.py  confidence.py  format.py  normalization.py  scoring.py  strengths.py  summary.py  tier.py
codemaru/fixtures/: __init__.py  demo.py
codemaru/models/: __init__.py  input.py  render.py  score.py  snapshot.py  summary.py
codemaru/render/: __init__.py  card.py  fonts.py  glyphs.py  icons.py  radar.py  themes.py  xml.py
codemaru/web/: __init__.py  middleware.py  query.py  routes.py  snippets.py
docs/: SCORING.md
static/: generator.js  styles.css
templates/: index.html
tests/: conftest.py  test_analytics.py  test_cli.py  test_kv.py
tests/adapters/: fakes.py  test_github.py  test_leetcode.py  test_solvedac.py
tests/api/: test_cache.py  test_caching.py  test_endpoints.py  test_live_mode.py  test_shared_cache.py
tests/core/: test_normalization.py  test_scoring.py  test_summary.py
tests/models/: test_input.py  test_snapshot.py
tests/render/: test_card.py  test_glyphs.py
tests/web/: test_middleware.py  test_query.py  test_snippets.py
